; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_comboex.c_debugstr_txt.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_comboex.c_debugstr_txt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LPSTR_TEXTCALLBACKW = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [11 x i8] c"(callback)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @debugstr_txt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @debugstr_txt(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @LPSTR_TEXTCALLBACKW, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %11

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = call i8* @debugstr_w(i64 %9)
  store i8* %10, i8** %2, align 8
  br label %11

11:                                               ; preds = %8, %7
  %12 = load i8*, i8** %2, align 8
  ret i8* %12
}

declare dso_local i8* @debugstr_w(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
